<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.kemitix</groupId>
        <artifactId>kemitix-parent</artifactId>
        <version>5.3.0</version>
        <relativePath/>
    </parent>

    <groupId>net.kemitix.checkstyle</groupId>
    <artifactId>builder</artifactId>
    <packaging>jar</packaging>
    <version>5.5.0</version>

    <properties>
        <maven.install.skip>true</maven.install.skip>
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <tiles-maven-plugin.version>2.19</tiles-maven-plugin.version>
        <kemitix-maven-tiles.version>3.0.1</kemitix-maven-tiles.version>

        <checkstyle.version>8.41</checkstyle.version>
        <sevntu.version>1.38.0</sevntu.version>
        <sevntu-plugin.version>1.35.0</sevntu-plugin.version>
        <lombok.version>1.18.18</lombok.version>
        <spring-platform.version>Brussels-SR6</spring-platform.version>
        <spring-boot.version>2.4.3</spring-boot.version>
        <mapstream.version>3.2.10</mapstream.version>
        <map-builder.version>1.0.0</map-builder.version>
        <mockito.version>3.8.0</mockito.version>
        <assertj.version>3.19.0</assertj.version>
        <classgraph.version>4.8.102</classgraph.version>

        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <kemitix.checkstyle.ruleset.version>${project.version}</kemitix.checkstyle.ruleset.version>
        <kemitix.checkstyle.ruleset.level>5-complexity</kemitix.checkstyle.ruleset.level>
        <kemitix.checkstyle.ruleset.location>net/kemitix/checkstyle-${kemitix.checkstyle.ruleset.level}.xml</kemitix.checkstyle.ruleset.location>
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
        <file-reader-writer.version>1.0.0</file-reader-writer.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>net.kemitix</groupId>
            <artifactId>file-reader-writer</artifactId>
            <version>${file-reader-writer.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.github.classgraph</groupId>
            <artifactId>classgraph</artifactId>
            <version>${classgraph.version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-starter-logging</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>${javax.annotation-api.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-log4j2</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.speedment.common</groupId>
            <artifactId>mapstream</artifactId>
            <version>${mapstream.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>me.andrz</groupId>
            <artifactId>map-builder</artifactId>
            <version>${map-builder.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.puppycrawl.tools</groupId>
            <artifactId>checkstyle</artifactId>
            <version>${checkstyle.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.sevntu-checkstyle</groupId>
            <artifactId>sevntu-checks</artifactId>
            <version>${sevntu.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>io.repaint.maven</groupId>
                <artifactId>tiles-maven-plugin</artifactId>
                <version>${tiles-maven-plugin.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <tiles>
                        <tile>net.kemitix.tiles:maven-plugins:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:compiler-jdk-lts:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:pmd:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:testing:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:spotbugs:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:coverage:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:pitest:${kemitix-maven-tiles.version}</tile>
                        <tile>net.kemitix.tiles:pmd-strict:${kemitix-maven-tiles.version}</tile>
                    </tiles>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <executable>true</executable>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>${maven-checkstyle-plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>${checkstyle.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>com.github.sevntu-checkstyle</groupId>
                        <artifactId>sevntu-checkstyle-maven-plugin</artifactId>
                        <version>${sevntu-plugin.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>net.kemitix.checkstyle</groupId>
                        <artifactId>ruleset</artifactId>
                        <version>${kemitix.checkstyle.ruleset.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>${kemitix.checkstyle.ruleset.location}</configLocation>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
